# mcsoft-auth

./: Cargo.toml
src/: lib.rs  main.rs
