[package]
name = "mcsoftauth"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.4", features = ["json", "multipart"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
webbrowser = "0.8.9"
dotenv = "0.15.0"
eyre = "0.6.8"
rand = "0.8.4"
warp = "0.3.1"
log = "0.4"